# TASK-MANAGER

./: .env.example  .env.production.example  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: desktop-release.yml
.tauri/: updater.key  updater.key.pub
.tmp-updater/: Nexus.Tasks_0.1.1_x64-setup.exe.sig  latest.json
.tmp-updater-check/: latest.json
.tmp-updater-fix/: Nexus.Tasks_0.1.1_x64_en-US.msi.sig  latest.json
docs/deployment/: 00-git-branch-strategy.md  01-overview-and-accounts.md  02-mongodb-atlas.md  03-backend-aws.md  03-backend-render.md  04-frontend-vercel.md  05-environment-variables-reference.md  06-novu-production.md  07-troubleshooting.md  08-master-to-deployment-workflow.md  09-novu-workflow-content.md  10-desktop-release-github-updater.md  README.md
scripts/: generate-tauri-icons.mjs  migrate-task-projects.mjs  release-version.mjs  set-cargo-package-version.mjs  sync-version-from-tag.mjs
server/: app.js  index.js
server/config/: db.js  env.js
server/controllers/: auth-controller.js  notification-controller.js  project-controller.js  task-controller.js  user-controller.js
server/middleware/: auth-middleware.js
server/models/: project-model.js  task-model.js  team-invite-model.js  user-model.js
server/routes/: auth-routes.js  notification-routes.js  project-routes.js  task-routes.js  user-routes.js
server/services/: auth-service.js  (+7 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+39 files in other folders)
